# CopyCleaner

./: .gitignore  LICENSE  README.md  STYLE.md  TODOS.md
cpp/: .clang-format  .gitignore  CMakeLists.txt  README.md
cpp/include/: ast.h  ast_common.hpp  errors.hpp  lexer.h  parser.h  result.hpp  runtime.h  runtime_utils.h  runtime_value.h  types.hpp  variant_utils.hpp
cpp/include/builtins/: alert.h  clipboard.h  console.h  logger.h
cpp/include/utils/: builtin_functions.h  list_methods.hpp  method_dispatcher.hpp  regex_methods.hpp  runtime_utils.h  string_methods.hpp  types_utils.hpp  utils.hpp  variant_utils.hpp
cpp/src/: ast.cpp  lexer.cpp  main.cpp  parser.cpp  runtime.cpp  runtime_utils.cpp
cpp/src/builtins/: alert.cpp  clipboard.cpp  console.cpp  logger.cpp
cpp/src/utils/: builtin_functions.cpp  list_methods.cpp  method_dispatcher.cpp  regex_methods.cpp  runtime_utils.cpp  string_methods.cpp
docs/: methods.md  syntax.md
docs/interpreter/: README.md
scripts/examples/: case_converter.ccl  csv_extractor.ccl  deduplicate_lines.ccl  json_extractor.ccl  markdown_links.ccl  url-extractor.ccl
scripts/tests/: comprehensive.ccl  run_tests.ps1  run_tests.sh  test.ccl  test_functions.ccl
vscode-extension/: README.md  package.json
vscode-extension/syntaxes/: copycleaner.tmLanguage.json
